--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,14 +2,16 @@ project:
   type: website
 
 website:
-  title: "personal_blog"
+  title: "Shubham Gupta"
   navbar:
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/
+        href: https://github.com/goodhamgupta
       - icon: twitter
-        href: https://twitter.com
+        href: https://twitter.com/shubhamg2208
+      - icon: linkedin
+        href: https://linkedin.com/in/shubhamgupta2208
 format:
   html:
     theme: cosmo
