Add CNAME to docs

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,10 @@
 project:
   type: website
   output-dir: docs
+  resources:
+    - CNAME
+  execute:
+    freeze: auto
 
 website:
   title: "Shubham Gupta"
