Remove option to edit post

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,7 +20,7 @@ website:
     location: navbar
     type: overlay
   repo-url: https://github.com/goodhamgupta/personal_blog
-  repo-actions: [edit, issue]
+  repo-actions: [issue]
 format:
   html:
     theme: 
