Mojo puzzles algorithms post (#4)
* Complete axis sum puzzle

* Update settings to allow repo options

* Add section for 2d indexing intro and naive matmul

* Fix image alignment

* Add description

* Add image for p14 shared mem matmul

* Add first version for roofline model

* Complete roofline model

* Add ncu error details

* Update blog image

* Add incorrect ojs plot

* Generate roofline plot for first two kernels

* Change plot details title

* Fix formatting

* Add warp intro

* Add tiled matmul gif

* Improve conclusion

* Improve blelloch fix section

* Fix thread hierachy image

* Improve explanation of tiling

* Moar improvements

* Remove section explaining tile sizes

* Add moar citations

* Add mojo functions citations

* Add citation

* Add moar citations

* Add annotated matmul

* Fix tiled matmul image

* Complete draft

* Remove option to edit post

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,7 +19,8 @@ website:
   search:
     location: navbar
     type: overlay
-
+  repo-url: https://github.com/goodhamgupta/personal_blog
+  repo-actions: [issue]
 format:
   html:
     theme: 
