--- a/_quarto.yml
+++ b/_quarto.yml
@@ -25,6 +25,10 @@ website:
   search:
     location: navbar
     type: overlay
+    algolia:
+      index-name: blog
+      application-id: HR1HJNZUVY
+      search-only-api-key: 3326e8971e20d27e2dd21591d6a24656
   repo-url: https://github.com/goodhamgupta/personal_blog
   repo-actions: [issue]
 format:
