--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,7 +26,7 @@ website:
     location: navbar
     type: overlay
     algolia:
-      index-name: blog
+      index-name: blog_pages
       application-id: HR1HJNZUVY
       search-only-api-key: 3326e8971e20d27e2dd21591d6a24656
   repo-url: https://github.com/goodhamgupta/personal_blog
