--- a/posts/2025-09-01-cl-dspy-modelling/_metadata.yml
+++ b/posts/2025-09-01-cl-dspy-modelling/_metadata.yml
@@ -1,3 +1,10 @@
 project:
   render:
     - "!2025-09-01-cl-dspy-modelling.ipynb"
+
+# Make any manual render self-contained and skip execution
+format:
+  html:
+    self-contained: true
+execute:
+  enabled: false
